# savitri-network

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  SECURITY-CREDITS.md  SECURITY.md  clippy.toml  rust-toolchain.toml  rustfmt.toml  truncate_dead_tests.py
Savitri-contracts/: Cargo.toml  README.md
Savitri-contracts/contracts/: RealCoin.sol
Savitri-contracts/examples/: deploy_minimal_contract.rs  deploy_token_contract.rs  oracle_integration.rs  oracle_integration_fixed.rs  voting_contract.rs  voting_contract_fixed.rs
Savitri-contracts/src/: connectors.rs  fee.rs  lib.rs  p2p.rs  storage.rs  storage_fixed.rs
Savitri-contracts/tests/: framework.rs  framework_test.rs  helpers.rs  integration_test.rs  mocks.rs  mod.rs  savitri20_test.rs  savnft_integration_test.rs  savnft_performance_test.rs  savnft_test.rs  upgrade_test.rs
genesis/: Cargo.toml  GENESIS_EXPLANATION.md  GENESIS_TESTNET.md  generate_testnet_genesis.rs  genesis.json
savitri-consensus/: Cargo.toml  GROUP_AWARE_CONFIG_DAG_EXTENSION.md  MULTI_PARENT_IMPLEMENTATION_SUMMARY.md  README.md  VALIDATION_REQUIREMENTS_DAG_EXTENSION.md  output.txt
savitri-consensus/src/: error.rs  lib.rs  serialization.rs  slashing.rs
savitri-consensus/tests/: baseline-public-api.txt  dag_integration_test.rs  dag_realistic_benchmark_fixed.rs  foundations_regression.rs  scoring_observations.rs
savitri-core/: Cargo.toml  README.md  check_output.txt
savitri-core/Savitri-core/: Cargo.toml  LICENSE
savitri-core/benches/: math_performance.rs
savitri-core/results/: BENCHMARK_RESULTS.md  CORE_TEST_REPORT.md  README.md  TEST_EXECUTION_GUIDE.md
savitri-core/src/: compression.rs  fl_robust.rs  lib.rs  sharding.rs
savitri-core/tests/: lib_tests.rs
savitri-guardian/: Cargo.toml  README.md
savitri-guardian/examples/: backup_automation.rs  guardian_setup.rs
savitri-guardian/src/: archive.rs  config.rs  main.rs  serve.rs  telemetry.rs
savitri-lightnode/: .gitignore  Cargo.toml  LICENSE  README.md  README_MULTI_INSTANCE.md  build-no-msvc.ps1  build_all.bat  build_msvc.bat  start_all_lightnodes.bat  start_all_lightnodes_simple.bat  start_lightnode_1.bat  start_lightnode_2.bat  start_lightnode_3.bat  start_lightnode_4.bat  start_lightnode_5.bat  start_lightnode_6.bat  start_lightnode_7.bat  start_lightnode_8.bat  start_msvc_terminal.bat  stop_all_lightnodes.bat
savitri-lightnode/examples/: desktop_lightnode.rs  mobile_setup.rs  tx_probe.rs
savitri-lightnode/src/: adaptive_latency.rs  availability.rs  compatibility.rs  config.rs  contract_executor.rs  integrity.rs  latency_canon_publisher.rs  latency_canon_state.rs  latency_service.rs  lattice_runtime.rs  lib.rs  logging.rs  main.rs  observability.rs  p2p_block_receiver.rs  p2p_broadcast.rs  p2p_certificate.rs  p2p_group_manager.rs  p2p_integrity.rs  p2p_intra_group.rs  p2p_periodic_tasks.rs  p2p_pou.rs  peer_registry.rs  proposer.rs  resource.rs  rpc.rs  signer.rs  storage.rs  telemetry.rs  tx.rs
savitri-lightnode/tests/: integration_test.rs
savitri-masternode/: .gitignore  Cargo.toml  Dockerfile  README.md  README_MULTI_INSTANCE.md  build.ps1  build_all.bat  masternode.toml  mn5_original.txt  start_all_masternodes.bat  start_masternode_1.bat  start_masternode_2.bat  start_masternode_3.bat  start_masternode_4.bat  start_masternode_5.bat  stop_all_masternodes.bat  test_config.toml
savitri-masternode/examples/: basic_setup.rs  validator_config.rs
savitri-masternode/src/: adaptive_batch_collector.rs  batch_collector.rs  block_messages.rs  bootstrap.rs  bridge.rs  config.rs  consensus_integration.rs  consensus_protocol.rs  consensus_storage_adapter.rs  contract_executor.rs  election_verification.rs  error_handling.rs  gossipsub_ext.rs  group_consensus.rs  group_formation.rs  integration_tests.rs  lib.rs  libp2p_network.rs  main.rs  masternode_p2p.rs  mempool_manager.rs  monolith_benchmark.rs  monolith_p2p.rs  monolith_p2p_fixed.rs  monolith_producer.rs  monolith_storage.rs  node.rs  p2p.rs  p2p_block_receiver.rs  performance.rs  proposal_validator.rs  retry_manager.rs  rewards.rs  rpc.rs  signature_verifier.rs  system_metrics.rs  telemetry.rs  transaction_validator.rs  vote_aggregator.rs  zkp_integration.rs  (+1 more)
savitri-masternode/storage/: .genesis
savitri-masternode/tests/: basic_tests.rs  governance_tests.rs  integration_tests.rs  proposal_tests.rs  standalone_tests.rs  storage_tests.rs
savitri-mempool/: .gitignore  Cargo.toml  README.md
savitri-mempool/benches/: cache_efficiency.rs  dispatcher_performance.rs
savitri-mempool/examples/: mempool_setup.rs  transaction_scheduling.rs
savitri-mempool/src/: group_aware_selection.rs  group_validation.rs  lib.rs  proposer_pool.rs  sigverify.rs
savitri-mempool/tests/: mempool_handle_golden.rs  mod.rs  transaction_ordering_tests.rs
savitri-p2p/: Cargo.toml  README.md
savitri-p2p/examples/: message_routing.rs  node_discovery.rs
savitri-p2p/results/: GOSSIP_P2P_BENCHMARK_REPORT.md  RAW_GOSSIP_BENCHMARK_RESULTS.md
savitri-p2p/src/: lib.rs  messages.rs
savitri-p2p/tests/: gossip_p2p_benchmark.rs  standalone_realistic_p2p.rs  standalone_realistic_p2p_fixed.rs
savitri-rpc/: Cargo.toml  README.md
savitri-rpc/src/: contract.rs  dag.rs  handlers.rs  jsonrpc.rs  lib.rs  pou.rs  server.rs  types.rs
savitri-sdk/: Cargo.toml  README.md
savitri-sdk/examples/: advanced_usage.rs  basic_transfer.rs  contract_interaction.rs  governance_integration.rs  light_node_setup.rs  oracle_integration.rs  quick_start.rs  wallet_management.rs
savitri-sdk/src/: lib.rs
savitri-sdk/tools/: key_generator.rs  network_monitor.rs  raw_tx_builder.rs  transaction_signer.rs
savitri-storage/: .gitignore  Cargo.toml  README.md
savitri-storage/Results/: RAW_TEST_RESULTS.md  README.md  STORAGE_TEST_REPORT.md  TEST_EXECUTION_GUIDE.md
savitri-storage/benches/: ENTERPRISE_STRESS_TEST_REPORT.md  enterprise_stress_test.rs  storage_bench.rs
savitri-storage/examples/: storage_setup.rs
savitri-storage/src/: lib.rs  traits.rs
savitri-zkp/: Cargo.toml  LICENSE  README.md
(+348 files in other folders)
