[workspace]
resolver = "2"

members = [
    "savitri-core",
    "savitri-storage",
    "savitri-mempool",
    "savitri-consensus",
    "savitri-p2p",
    "savitri-rpc",
    "Savitri-contracts",
    "savitri-zkp",
    "savitri-sdk",
    "savitri-masternode",
    "savitri-lightnode",
    "savitri-guardian",
    "genesis",
    "tools/rpc-loadtest",
]

# ──────────────────────────────────────────────
# Build profiles
# ──────────────────────────────────────────────

[profile.dev]
opt-level = 1
debug = false
incremental = true
codegen-units = 1

[profile.test]
opt-level = 1
debug = false
incremental = true

[profile.release]
opt-level = 3
debug = false
lto = false
codegen-units = 16
incremental = false

[profile.bench]
opt-level = 3
lto = false
codegen-units = 16
incremental = false
