[package]
name = "savitri-contracts"
version = "0.1.0"
edition = "2021"
autotests = false
autoexamples = false
license = "Apache-2.0"
authors = ["Savitri Network"]
description = "Smart contracts, governance, and oracle framework for Savitri Network"
homepage = "https://savitrinetwork.com"
repository = "https://github.com/savitri-network/savitri-contracts"
keywords = ["blockchain", "smart-contracts", "governance", "oracle", "savitri"]
categories = ["cryptography", "blockchain"]

[lib]
doctest = false

[dependencies]
# Core dependencies
savitri-core = { version = "0.1.0", path = "../savitri-core" }
savitri-storage = { version = "0.1.0", path = "../savitri-storage" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=1.3.3"

# Cryptography
sha2 = "=0.10.8"
sha3 = "0.10"
blake3 = "=1.5.5"
hex = "0.4"
ed25519-dalek = { version = "=2.1", features = ["rand_core"] }

# Logging and tracing
log = "0.4"
tracing = "0.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Utilities
once_cell = "1.19"

# Metrics
metrics = "0.24"

# Parallel processing
rayon = "1.8"

# Database
rocksdb = "=0.22.0"

# Serialization for large arrays
serde-big-array = "0.5"
primitive-types = "0.12"

[features]
default = ["governance", "oracle"]
governance = []
oracle = []
standards = ["fl", "erc20"]
fl = []
erc20 = []

[dev-dependencies]
tempfile = "3.3"
criterion = { version = "0.5", features = ["html_reports"] }
rand = "=0.8.5"
