[package]
name = "savitri-genesis"
version = "0.1.0"
edition = "2021"
description = "Genesis-state generation utilities for Savitri Network"
license = "Apache-2.0"

[dependencies]
savitri-core = { path = "../savitri-core" }
hex = "0.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[[bin]]
name = "generate_testnet_genesis"
path = "generate_testnet_genesis.rs"
