[package]
name = "savitri-consensus"
version = "0.1.0"
edition = "2021"
authors = ["Savitri Network Team"]
license = "Apache-2.0"
description = "Shared consensus library for Savitri blockchain nodes"

[features]
default = ["std", "zkp"]
std = []
group-aware = []
pou-based = []
bft = []
lightweight = []
full = ["group-aware", "pou-based", "bft"]
zkp = []
with-zkp = []

[dependencies]
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# V0.2 Phase 1 (Score Canonicity): for [u8; 64] serialization in LatencyReport.signature
serde-big-array = "0.5"
bincode = "=1.3.3"
blake3 = "=1.5.5"
tokio = { version = "1.0", features = ["sync", "rt", "time"] }
tracing = "0.1"
uuid = { version = "1.0", features = ["v4", "serde"] }
futures = "0.3"
ed25519-dalek = { version = "=2.1", features = ["rand_core"] }
sha2 = "=0.10.8"
blake2 = "0.10"
async-trait = "0.1"
rayon = "1.8"
hex = "0.4"
rand = "=0.8.5"  # MED-07: pinned
zeroize = { version = "1.6", features = ["zeroize_derive"] }
# ZKP integration (always enabled — real arkworks backend)
savitri-zkp = { path = "../savitri-zkp", default-features = false, features = ["arkworks"] }
# Core math (FL robust scoring shared with mempool)
savitri-core = { path = "../savitri-core" }

[dev-dependencies]
tokio = { version = "1.0", features = ["full"] }
ed25519-dalek = { version = "=2.1", features = ["batch", "rand_core"] }
rand = "=0.8.5"
sha2 = "=0.10.8"
# MED-08: replaced unmaintained `sled 0.34` with `redb` (actively maintained,
# ACID, no known CVEs). sled has been archived/unmaintained since ~2022.
redb = "2.1"
rayon = "1.8"
lru = "0.16"
