[package]
name = "savitri-core"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Savitri Network"]
description = "Core library for Savitri Network - base types, cryptography, utilities, and metrics"
homepage = "https://savitrinetwork.com"
repository = "https://github.com/savitri-network/savitri-core"
keywords = ["blockchain", "cryptography", "core", "savitri"]

categories = ["cryptography", "data-structures", "algorithms"]

# Make this package independent from parent workspace

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=1.3.3"
serde-big-array = "0.5"
serde_bytes = "0.11"

# Cryptography
sha2 = "=0.10.8"
sha3 = "0.10"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
ed25519-dalek = { version = "=2.1", features = ["batch", "rand_core"] }
blake3 = "=1.5.5"
curve25519-dalek = { version = "4.1", default-features = true }
savitri-zkp = { path = "../savitri-zkp", default-features = false, features = ["arkworks"] }
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = { version = "0.3", default-features = false }
hex = "0.4"
aes-gcm = "=0.10.3"
pbkdf2 = "=0.12.2"
hmac = "=0.12.1"
zeroize = "1.7"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Async runtime
tokio = { version = "1.35", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Time
chrono = { version = "0.4", features = ["serde"] }

# System information
sysinfo = "0.30"

# Database (optional - requires MSVC on Windows)
rocksdb = { version = "0.22", optional = true }

# P2P (optional)
libp2p = { version = "0.55", optional = true }

# External dependencies (obbligatorie)
savitri-storage = { path = "../savitri-storage", default-features = false }

# ⭐ INDEPENDENT REPOSITORY - NO WORKSPACE DEPENDENCIES
# This repository is designed to be completely independent
# and publishable to crates.io without workspace dependencies

# Utilities
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
ethnum = "1.3.0"

# Compression (optional)
snap = { version = "1.1", optional = true }
zstd = { version = "0.13", optional = true }
lz4 = { version = "1.24", optional = true }

# Testing (dev dependencies only)
[dev-dependencies]
tokio = { version = "1.35.0", features = ["rt", "macros"] }
tempfile = "3.3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
serial_test = "3.0"

# Benchmark dependencies
[[bench]]
name = "math_performance"
harness = false

[features]
default = []
rocksdb = ["dep:rocksdb"]
bench = []
stress-tests = []
compression = ["snap", "zstd", "lz4"]
libp2p = ["dep:libp2p"]
shared-types = []
savitri-zkp = []
full = ["shared-types", "libp2p"]
# Genesis semplificato per testnet: nessun vesting, supply dalla somma of the tx
testnet = []
