[package]
name = "savitri-mempool"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Savitri Network"]
description = "High-performance mempool and transaction execution engine with SIMD optimizations, adaptive scheduling, and atomic nonce resolution"
homepage = "https://savitrinetwork.com"
repository = "https://github.com/savitri-network/savitri-mempool"

[dependencies]
# Core dependencies - LOCAL PATH FOR TESTING
savitri-core = { path = "../savitri-core" }
savitri-storage = { path = "../savitri-storage", default-features = false }

# ⭐ INDEPENDENT REPOSITORY - LOCAL TESTING
# Using local path for now, will change to "0.1.0" after publication

# Concurrency
rayon = "1.8"
crossbeam = "0.8"

# Cache
lru = "0.12"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=1.3.3"
serde-big-array = "0.5"

# Crypto
sha2 = "=0.10.8"
sha3 = "0.10"
blake3 = "=1.5.5"
ed25519-dalek = { version = "=2.1", features = ["batch", "rand_core"] }

# Async runtime
tokio = { version = "1.35", features = ["full"] }
futures = "0.3"

# Error handling
anyhow = "1.0"
thiserror = "1.0"

# Metrics
metrics = "0.24"
metrics-prometheus = "0.11"

# Utilities
hex = "0.4"
once_cell = "1.19"
ahash = "0.8"
dashmap = "5.5"
num_cpus = "1.16"

# Logging and tracing
tracing = "0.1"

[features]
default = ["simd", "cache"]
simd = []
cache = []
adaptive_weights = []

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "dispatcher_performance"
harness = false

[[bench]]
name = "cache_efficiency"
harness = false
