[package]
name = "savitri-rpc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7", features = ["json"] }
http = "1.0"
tower = { version = "0.5", features = [] }
tower-http = { version = "0.5", features = ["cors", "trace"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
anyhow = "1.0"
tracing = "0.1"
async-trait = "0.1"

savitri-storage = { path = "../savitri-storage", features = ["rocksdb"] }
savitri-mempool = { path = "../savitri-mempool" }
savitri-core = { path = "../savitri-core" }
ed25519-dalek = { version = "=2.1", features = ["rand_core"] }
sha2 = "=0.10.8"
bincode = "=1.3.3"
serde-big-array = "0.5"
dashmap = "5.5"
