[package]
name = "savitri-storage"
version = "0.1.0"
edition = "2021"
authors = ["Savitri Network Team"]
license = "Apache-2.0"
description = "Storage layer for Savitri blockchain with RocksDB and FlatFile support"
homepage = "https://savitri.network"
repository = "https://github.com/savitri-network/savitri-storage"

# This makes this package a separate workspace

[features]
default = ["rocksdb"]
memory = []
rocksdb = ["dep:rocksdb"]
tokio = ["dep:tokio"]
prometheus = ["dep:prometheus"]
tempfile = ["dep:tempfile"]

[dependencies]
# Core dependencies
anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=1.3.3"

# Cryptography
sha2 = "=0.10.8"
sha3 = "0.10"
blake3 = "=1.5.5"

# Caching
lru = "0.12"

# Utilities
hex = "0.4"
tempfile = { version = "3.8", optional = true }
tracing = "0.1"

# RocksDB (optional) — MED-07: pinned exact version (C++ FFI; unreviewed upgrades
# risk ABI breaks or new unsafe code entering the supply chain).
rocksdb = { version = "=0.22.0", optional = true, default-features = false, features = ["snappy", "lz4", "zstd", "zlib"] }

# Async/Tokio
tokio = { version = "1.0", features = ["sync", "rt"], optional = true }

# Metrics (optional)
prometheus = { version = "0.14", optional = true }
metrics = "0.24"

[dev-dependencies]
tempfile = "3.8"
tokio = { version = "1.0", features = ["full"] }
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "storage_bench"
harness = false

[[bench]]
name = "enterprise_stress_test"
harness = false

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
