[package]
name = "savitri-zkp"
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
authors = ["Savitri Network"]
description = "Zero Knowledge Proof implementation for Savitri Network"
homepage = "https://savitrinetwork.com"
repository = "https://github.com/savitri-network/savitri-zkp"
keywords = ["blockchain", "zero-knowledge", "cryptography", "zkp", "savitri"]
categories = ["cryptography", "blockchain"]

[features]
default = []
mock = []
plonk = ["dep:halo2curves", "dep:halo2_proofs"]
arkworks = ["dep:ark-bn254", "dep:ark-ec", "dep:ark-ff", "dep:ark-serialize", "dep:ark-relations", "dep:ark-groth16"]
circom = ["arkworks", "dep:ark-circom"]
production = ["arkworks"]  # Use arkworks for production
advanced = ["arkworks", "plonk"]
all_backends = ["arkworks", "plonk"]

[dependencies]
# ⭐ INDEPENDENT REPOSITORY - LOCAL TESTING
# No dependency on savitri-core to avoid circular dependencies

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=1.3.3"

# Cryptography
sha2 = "=0.10.8"
sha3 = "0.10"
blake3 = "=1.5.5"
rand = "=0.8.5"

# Optional dependencies for different ZKP backends
ark-bn254 = { version = "0.5", optional = true }
ark-ec = { version = "0.5", optional = true }
ark-ff = { version = "0.5", optional = true }
ark-serialize = { version = "0.5", optional = true }
ark-relations = { version = "0.5", optional = true }
ark-groth16 = { version = "0.5", optional = true }
# LOW-05: ark-circom is at alpha quality. Do NOT enable the `circom` feature in
# production or testnet builds — it is available only for local development/research.
# When a stable release is available, update to a non-alpha version and audit it.
ark-circom = { version = "0.5.0-alpha", optional = true }
# PLONK dependencies (using halo2 directly)
halo2curves = { version = "0.4", optional = true }
halo2_proofs = { version = "0.3", optional = true }
serde-big-array = "0.5"

# Utilities
anyhow = "1.0"
thiserror = "1.0"
hex = "0.4"
tracing = "0.1"

# Async runtime
tokio = { version = "1.35", features = ["full"], optional = true }

[dev-dependencies]
tempfile = "3.8"
criterion = { version = "0.5", features = ["html_reports"] }

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]
