[package]
name = "savitri-core"
version = "0.1.0"
edition = "2021"
license = "MIT"
authors = ["Savitri Network"]
description = "Core library for Savitri Network - base types, cryptography, utilities, and metrics"
homepage = "https://savitrinetwork.com"
repository = "https://github.com/savitri-network/savitri-core"
keywords = ["blockchain", "cryptography", "core", "savitri"]

categories = ["cryptography", "data-structures", "algorithms"]

# Make this package independent from parent workspace

# Release profile optimizations
[profile.release]
lto = "thin"
codegen-units = 4
opt-level = 3
strip = true
overflow-checks = true
debug-assertions = false

# Development profile - fast compilation
[profile.dev]
opt-level = 0
debug = true
overflow-checks = true
debug-assertions = true

# Testing profile
[profile.test]
opt-level = 1
debug = true
overflow-checks = true
debug-assertions = true

[dependencies]
# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "=1.3.3"
serde-big-array = "0.5"

# Cryptography
sha2 = "=0.10.8"
sha3 = "0.10"
rand = { version = "0.8.5", features = ["std", "std_rng"] }
ed25519-dalek = { version = "=2.1", features = ["batch", "rand_core"] }
blake3 = "=1.5.5"
curve25519-dalek = { version = "4.1", default-features = true }
rand_core = { version = "0.6", features = ["std"] }
rand_chacha = { version = "0.3", default-features = false }
hex = "0.4"
aes-gcm = "=0.10.3"
hmac = "=0.12.1"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
env_logger = "0.10"

# Time
chrono = { version = "0.4", features = ["serde"] }

# Utilities
once_cell = "1.19"
uuid = { version = "1.0", features = ["v4"] }
ethnum = "1.3.0"

# Testing (dev dependencies only)
[dev-dependencies]
tokio = { version = "1.35.0", features = ["rt", "macros"] }
tempfile = "3.3"
criterion = { version = "0.5", features = ["html_reports"] }
proptest = "1.0"
serial_test = "3.0"

# Benchmark dependencies
[[bench]]
name = "math_performance"
harness = false

[features]
default = []
bench = []
stress-tests = []
