[package]
name = "savitri-storage-tests"
version = "0.1.0"
edition = "2021"
publish = false

[workspace]
# This makes this package a separate workspace

[dependencies]
savitri-storage = { path = ".." }
tempfile = "3.8"
rand = "0.8"
tokio = { version = "1.0", features = ["full"] }

[[bin]]
name = "comprehensive_tests"
path = "comprehensive_tests.rs"

[[bin]]
name = "unit_tests"
path = "unit_tests.rs"

[[bin]]
name = "integration_tests"
path = "integration_tests.rs"

[[bin]]
name = "performance_tests"
path = "performance_tests.rs"

[[bin]]
name = "stress_tests"
path = "stress_tests.rs"
